Make the whole global nav heading targetable for expanding and collapsing the nav. (Fix #462)

--- a/application/asset/css/style.css
+++ b/application/asset/css/style.css
@@ -1111,6 +1111,8 @@ th {
     position: absolute;
     top: 0;
     right: 0;
+    width: 100%;
+    text-align: right;
   }
 
   /* @end */
