--- a/application/asset/sass/_screen.scss
+++ b/application/asset/sass/_screen.scss
@@ -706,6 +706,8 @@ nav.pagination form input[type="text"] {
         position: absolute;
         top: 0;
         right: 0;
+        width: 100%;
+        text-align: right;
     }
 
     /* @end */
